[package]
name = "navactor"
version = "0.5.4"
edition = "2021"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "A cli tool for creating and updating actors from piped input"
keywords = ["iot", "commandline", "actor", "digital", "twin"]
repository = "https://github.com/navicore/navactor/"

[[bin]]
name = "nv"
path = "src/main.rs"

[dependencies]
approx = "0.5.1"
async-trait = "0.1.78"
clap = { version = "4", features = ["derive", "cargo"] }
clap_complete = "4"
glob = "0.3.1"
petgraph = "0.6.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7", features = [ "sqlite", "runtime-tokio-rustls" ] }
test-log = "0.2.15"
time = { version = "0.3.34", features = ["macros", "parsing", "serde"] }
tokio = { version = "1", features = ["full"] }
poem = { version = "1", features = ["test"]}
poem-openapi = { version = "3", features = ["swagger-ui"]}
futures = "0.3.30"
tracing = "0.1"
tracing-subscriber = "0.3"
