[package]
name = "navactor"
version = "0.5.4"
edition = "2021"
license = "MIT"
authors = ["Ed Sweeney <ed@onextent.com>"]
description = "A cli tool for creating and updating actors from piped input"
keywords = ["iot", "commandline", "actor", "digital", "twin"]
repository = "https://github.com/navicore/navactor/"

[[bin]]
name = "nv"
path = "src/main.rs"

[dependencies]
approx = "0.5.1"
async-trait = "0.1.87"
clap = { version = "4", features = ["derive", "cargo"] }
clap_complete = "4"
glob = "0.3.2"
petgraph = "0.7.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio-rustls" ] }
test-log = "0.2.17"
time = { version = "0.3.37", features = ["macros", "parsing", "serde"] }
tokio = { version = "1", features = ["full"] }
poem = { version = "1", features = ["test"]}
poem-openapi = { version = "3", features = ["swagger-ui"]}
futures = "0.3.31"
tracing = "0.1"
tracing-subscriber = "0.3"
